--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.6",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@vitest/coverage-v8": "^3.1.1",
     "@vue/tsconfig": "^0.7.0",
     "playwright": "^1.52.0",
+    "sass": "^1.86.3",
     "storybook": "^8.6.12",
     "typescript": "~5.7.2",
     "vite": "^6.3.1",
